--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,18 @@ Version: 1.0
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700);
 
 
+@font-face {
+  font-family:"Dubai";
+  src: url("fonts/Dubai-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Dubai";
+    src: url("fonts/Dubai-Bold.ttf");
+    font-weight: bold;
+}
+
+
 /* ============================================================================= 
 #2. Global css
 ============================================================================= */
@@ -73,7 +85,7 @@ Version: 1.0
 
 body {
     font-family: 'Tajawal', sans-serif;
-    font-size: 14px;
+    font-size: 18px;
     direction: rtl;
     text-align: right;
 }
@@ -273,7 +285,7 @@ ol {
     font-size: 12px;
 }
 .theme-btn{
-    background-image:  linear-gradient(to right, #901ec1 0%, #7450fe 51%, #901ec1 100%);
+    background-image:  linear-gradient(to right, #1e23c1 0%, #2a3dc3 51%, #1e23c1 100%);
     -webkit-transition: all 500ms;
     transition: all 500ms;
     background-size: 200% auto;
@@ -371,8 +383,8 @@ ul.list-checked li{
     line-height: 30px;
 }
 ul.list-checked li i {
-    color: #901ec1;
-    background: rgba(144, 30, 193, 0.07);
+    color: #213bf7;
+    background: rgb(32, 30, 193, 0.07);
     border-color: transparent;
     width: 30px;
     height: 30px;
@@ -461,7 +473,7 @@ ul.list-checked li i {
     margin-right: auto;
 }
 .header-area.sticky .navbar{
-    background-image: linear-gradient(to right, rgba(144, 30, 193, 0.90) 0%, rgba(116, 80, 254, 0.90) 51%, rgba(144, 30, 193, 0.90) 100%);
+    background-image: linear-gradient(to right, rgb(26 42 189 / 90%) 0%, rgb(36 83 255 / 90%) 51%, rgb(26 42 189 / 0.9) 100%);
     background-size: 200% auto;
 }
 .site-logo a{
@@ -586,7 +598,7 @@ ul.list-checked li i {
 .start_home.demo1:before, .start_home.demo2:before {
     position: absolute;
     content: '';
-    background: linear-gradient(to right, rgba(144, 30, 193, 0.90) 0%, rgb(107, 73, 238, 0.90) 51%, rgba(144, 30, 193, 0.90) 100%);
+    background: linear-gradient(to right, rgb(26 42 189 / 90%) 0%, rgb(36 83 255 / 90%) 51%, rgb(26 42 189 / 0.9) 100%);
     background-size: 200% auto;
     width: 100%;
     height: 100%;
@@ -622,10 +634,11 @@ ul.list-checked li i {
     text-transform: capitalize;
     font-size: 40px;
     color: #fff;
+	margin-top: 70px;
 }
 .start-home-content p {
     color: #fff;
-    font-size: 16px;
+    font-size: 24px;
 }
 .apple-button {
     width: 180px;
@@ -717,7 +730,7 @@ ul.list-checked li i {
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
-    padding-right: 60px;
+    padding-right: 0px /* adjust per needed */;
 }
 .wave-area {
     height: 5%;
@@ -2035,12 +2048,11 @@ footer p{
 .newsletter-form {
     background: transparent;
     border-radius: 30px;
-    height: 45px;
     width: 100%;
     padding-left: 30%;
-    position: relative;
+
 }
-.newsletter-form input[type="email"] {
+.newsletter-form input {
     width: 100%;
     padding-left: 20px;
     height: 45px;
@@ -2048,19 +2060,21 @@ footer p{
     box-shadow: none;
     border: none;
     padding-right: 20px;
-    border-radius: 0 30px 30px 0;
+    border-radius: 20px;
+	margin-bottom: 5px;
 }
 .newsletter-form  input[type="email"]:focus{
     outline: none;
     box-shadow: none;
 }
 .newsletter-form button {
-    position: absolute;
-    height: 100%;
-    border-radius: 30px 0 0 30px;
+    border-radius: 10px;
+	border: 2px solid white;
     left: -1px;
-    top: 0;
-    width: 30%;
+	padding: 20px;
+	margin-top: 10px;
+	font-weight: bold;
+	font-size: 18px;
 }
 
 /* ============================================================================= 
