--- a/css/style.css
+++ b/css/style.css
@@ -62,17 +62,6 @@ Version: 1.0
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700);
 
 
-@font-face {
-  font-family:"Dubai";
-  src: url("fonts/Dubai-Regular.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Dubai";
-    src: url("fonts/Dubai-Bold.ttf");
-    font-weight: bold;
-}
-
 
 /* ============================================================================= 
 #2. Global css
@@ -400,7 +389,7 @@ ul.list-checked li i {
 #back-to-top .top {
     position: fixed;
     color: #ffffff;
-    background: linear-gradient(to right, rgb(26 42 189 / 90%) 0%, rgb(36 83 255 / 90%) 51%, rgb(26 42 189 / 0.9) 100%);
+    background-color: #0065ff;
     background-size: 200% auto;
     bottom: 45px;
     right: 45px;
@@ -437,7 +426,7 @@ ul.list-checked li i {
 }
 #preloader-circle span {
     position:absolute;
-    border: 8px solid rgba(144, 30, 193, 0.8);
+    border: 8px solid #0065ff;
     border-top: 8px solid transparent;
     border-radius:999px;
 }
@@ -597,7 +586,7 @@ ul.list-checked li i {
 .start_home.demo1:before, .start_home.demo2:before {
     position: absolute;
     content: '';
-    background: linear-gradient(to right, rgb(26 42 189 / 90%) 0%, rgb(36 83 255 / 90%) 51%, rgb(26 42 189 / 0.9) 100%);
+    background: linear-gradient(to right, rgba(0,101,255, .9) 0%, rgba(0,127,255,.9) 51%,  rgba(0,101,255, .9) 100%);
     background-size: 200% auto;
     width: 100%;
     height: 100%;
@@ -1768,7 +1757,7 @@ header.card-header {
     margin-bottom: 15px;
 }
 #faqs .card-header{
-    background-image: linear-gradient(to right, #901ec1 0%, #7450fe 51%, #901ec1 100%);
+    background-image: linear-gradient(to right, rgba(0,101,255, .9) 0%, rgba(0,127,255,.9) 51%,  rgba(0,101,255, .9) 100%);
     text-align: left;
     padding: 13px 25px;
     border-radius: 30px !important;
@@ -2508,7 +2497,7 @@ footer p{
 .faq-icon i:before{
     font-size: 60px;
     background: #901ec1;
-    background: linear-gradient(to right, rgb(26 42 189 / 90%) 0%, rgb(36 83 255 / 90%) 51%, rgb(26 42 189 / 0.9) 100%);
+    background: linear-gradient(to right, rgba(0,101,255, .9) 0%, rgba(0,127,255,.9) 51%,  rgba(0,101,255, .9) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-left: 0; 
