--- a/css/style.css
+++ b/css/style.css
@@ -2496,7 +2496,7 @@ footer p{
 }
 .faq-icon i:before{
     font-size: 60px;
-    background: #901ec1;
+    background: rgb(0,31,255);
     background: linear-gradient(to right, rgba(0,101,255, .9) 0%, rgba(0,31,255,.9) 51%,  rgba(0,101,255, .9) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
