--- a/css/style.css
+++ b/css/style.css
@@ -3039,3 +3039,11 @@ footer p{
         font-size: 14px;
     }
 }
+
+
+/* ============================================================================= 
+#24. Custom
+============================================================================= */
+#AppFeatures{
+	padding-bottom: 0px;
+}
